--- a/events.html
+++ b/events.html
@@ -135,7 +135,7 @@
                   <!-- блок с карточками  -->
                   <div class="long-events-list__block list-events">
                      <!-- блок с карточкой -->
-                     <div class="list-events__item list-events__item--long">
+                     <div class="list-events__item list-events__item--long row _active">
                         <!-- блок дата, месяц, время -->
                         <div class="list-events__date-block">
                            <div class="list-events__date">
@@ -166,8 +166,40 @@
                            </a>
                         </div>
                      </div>
+                     <!-- карточка сеткой -->
+                     <div class="list-events__item list-events__item--long column">
+                        <!-- блок дата, месяц, время -->
+                        <div class="column__date-block">
+                           <div class="column__date">
+                              05 Aug
+                           </div>
+                           <div class="column__schedule">
+                              <!-- <span class="column__month">
+                                 August
+                              </span> -->
+                              <span class="column__time">
+                                 11:00 - 14:00
+                              </span>
+                           </div>
+                        </div>
+                        <!-- текстовый блок -->
+                        <div class="column__text-block">
+                           <p class="column__text">
+                              Formation of the organizational structure of the company in the face of uncertainty.
+                           </p>
+                           <p class="column__info">
+                              Onine master-class
+                           </p>
+                        </div>
+                        <!-- блок с кнопкой -->
+                        <div class="column__button-block">
+                           <a href="#" class="column__button colorless-button">
+                              View more
+                           </a>
+                        </div>
+                     </div>
                      <!-- блок с карточкой -->
-                     <div class="list-events__item list-events__item--long">
+                     <div class="list-events__item list-events__item--long row _active">
                         <!-- блок дата, месяц, время -->
                         <div class="list-events__date-block">
                            <div class="list-events__date">
@@ -197,8 +229,40 @@
                            </a>
                         </div>
                      </div>
+                     <!-- карточка сеткой -->
+                     <div class="list-events__item list-events__item--long column">
+                        <!-- блок дата, месяц, время -->
+                        <div class="column__date-block">
+                           <div class="column__date">
+                              24 Jul
+                           </div>
+                           <div class="column__schedule">
+                              <!-- <span class="column__month">
+                                 August
+                              </span> -->
+                              <span class="column__time">
+                                 11:00 – 12:30
+                              </span>
+                           </div>
+                        </div>
+                        <!-- текстовый блок -->
+                        <div class="column__text-block">
+                           <p class="column__text">
+                              Building a customer service department. Best Practices.
+                           </p>
+                           <p class="column__info">
+                              Onine lecture
+                           </p>
+                        </div>
+                        <!-- блок с кнопкой -->
+                        <div class="column__button-block">
+                           <a href="#" class="column__button colorless-button">
+                              View more
+                           </a>
+                        </div>
+                     </div>
                      <!-- блок с карточкой -->
-                     <div class="list-events__item list-events__item--long">
+                     <div class="list-events__item list-events__item--long row _active">
                         <!-- блок дата, месяц, время -->
                         <div class="list-events__date-block">
                            <div class="list-events__date">
@@ -228,8 +292,40 @@
                            </a>
                         </div>
                      </div>
+                     <!-- карточка сеткой -->
+                     <div class="list-events__item list-events__item--long column">
+                        <!-- блок дата, месяц, время -->
+                        <div class="column__date-block">
+                           <div class="column__date">
+                              16 Jul
+                           </div>
+                           <div class="column__schedule">
+                              <!-- <span class="column__month">
+                                 August
+                              </span> -->
+                              <span class="column__time">
+                                 10:00 – 13:00
+                              </span>
+                           </div>
+                        </div>
+                        <!-- текстовый блок -->
+                        <div class="column__text-block">
+                           <p class="column__text">
+                              How to apply methods of speculative design in practice. Worldbuilding prototyping.
+                           </p>
+                           <p class="column__info">
+                              Onine workshop
+                           </p>
+                        </div>
+                        <!-- блок с кнопкой -->
+                        <div class="column__button-block">
+                           <a href="#" class="column__button colorless-button">
+                              View more
+                           </a>
+                        </div>
+                     </div>
                      <!-- блок с карточкой -->
-                     <div class="list-events__item list-events__item--long">
+                     <div class="list-events__item list-events__item--long row _active">
                         <!-- блок дата, месяц, время -->
                         <div class="list-events__date-block">
                            <div class="list-events__date">
@@ -260,8 +356,40 @@
                            </a>
                         </div>
                      </div>
+                     <!-- карточка сеткой -->
+                     <div class="list-events__item list-events__item--long column">
+                        <!-- блок дата, месяц, время -->
+                        <div class="column__date-block">
+                           <div class="column__date">
+                              10 Jul
+                           </div>
+                           <div class="column__schedule">
+                              <!-- <span class="column__month">
+                                 August
+                              </span> -->
+                              <span class="column__time">
+                                 9:00 – 14:00
+                              </span>
+                           </div>
+                        </div>
+                        <!-- текстовый блок -->
+                        <div class="column__text-block">
+                           <p class="column__text">
+                              Find and evaluate: search and assessment tools for candidates.
+                           </p>
+                           <p class="column__info">
+                              Onine workshop
+                           </p>
+                        </div>
+                        <!-- блок с кнопкой -->
+                        <div class="column__button-block">
+                           <a href="#" class="column__button colorless-button">
+                              View more
+                           </a>
+                        </div>
+                     </div>
                      <!-- блок с карточкой -->
-                     <div class="list-events__item list-events__item--long">
+                     <div class="list-events__item list-events__item--long row _active">
                         <!-- блок дата, месяц, время -->
                         <div class="list-events__date-block">
                            <div class="list-events__date">
@@ -292,8 +420,40 @@
                            </a>
                         </div>
                      </div>
+                     <!-- карточка сеткой -->
+                     <div class="list-events__item list-events__item--long column">
+                        <!-- блок дата, месяц, время -->
+                        <div class="column__date-block">
+                           <div class="column__date">
+                              27 Jun
+                           </div>
+                           <div class="column__schedule">
+                              <!-- <span class="column__month">
+                                 August
+                              </span> -->
+                              <span class="column__time">
+                                 15:00 – 19:00
+                              </span>
+                           </div>
+                        </div>
+                        <!-- текстовый блок -->
+                        <div class="column__text-block">
+                           <p class="column__text">
+                              Connection to Microsoft Excel and Google Sheets, Data Visualization in Power BI.
+                           </p>
+                           <p class="column__info">
+                              Onine master-class
+                           </p>
+                        </div>
+                        <!-- блок с кнопкой -->
+                        <div class="column__button-block">
+                           <a href="#" class="column__button colorless-button">
+                              View more
+                           </a>
+                        </div>
+                     </div>
                      <!-- блок с карточкой -->
-                     <div class="list-events__item list-events__item--long">
+                     <div class="list-events__item list-events__item--long row _active">
                         <!-- блок дата, месяц, время -->
                         <div class="list-events__date-block">
                            <div class="list-events__date">
@@ -324,8 +484,40 @@
                            </a>
                         </div>
                      </div>
+                     <!-- карточка сеткой -->
+                     <div class="list-events__item list-events__item--long column">
+                        <!-- блок дата, месяц, время -->
+                        <div class="column__date-block">
+                           <div class="column__date">
+                              15 Jun
+                           </div>
+                           <div class="column__schedule">
+                              <!-- <span class="column__month">
+                                 August
+                              </span> -->
+                              <span class="column__time">
+                                 11:00 – 12:00
+                              </span>
+                           </div>
+                        </div>
+                        <!-- текстовый блок -->
+                        <div class="column__text-block">
+                           <p class="column__text">
+                              Marketing or growth hacking: main differences and what business needs.
+                           </p>
+                           <p class="column__info">
+                              Onine lecture
+                           </p>
+                        </div>
+                        <!-- блок с кнопкой -->
+                        <div class="column__button-block">
+                           <a href="#" class="column__button colorless-button">
+                              View more
+                           </a>
+                        </div>
+                     </div>
                      <!-- блок с карточкой -->
-                     <div class="list-events__item list-events__item--long">
+                     <div class="list-events__item list-events__item--long row _active">
                         <!-- блок дата, месяц, время -->
                         <div class="list-events__date-block">
                            <div class="list-events__date">
@@ -356,8 +548,40 @@
                            </a>
                         </div>
                      </div>
+                     <!-- карточка сеткой -->
+                     <div class="list-events__item list-events__item--long column">
+                        <!-- блок дата, месяц, время -->
+                        <div class="column__date-block">
+                           <div class="column__date">
+                              02 Jul
+                           </div>
+                           <div class="column__schedule">
+                              <!-- <span class="column__month">
+                                 August
+                              </span> -->
+                              <span class="column__time">
+                                 11:00 – 13:00
+                              </span>
+                           </div>
+                        </div>
+                        <!-- текстовый блок -->
+                        <div class="column__text-block">
+                           <p class="column__text">
+                              How to brief a client and present your design to approve it from the first show.
+                           </p>
+                           <p class="column__info">
+                              Onine lecture
+                           </p>
+                        </div>
+                        <!-- блок с кнопкой -->
+                        <div class="column__button-block">
+                           <a href="#" class="column__button colorless-button">
+                              View more
+                           </a>
+                        </div>
+                     </div>
                      <!-- блок с карточкой -->
-                     <div class="list-events__item list-events__item--long">
+                     <div class="list-events__item list-events__item--long row _active">
                         <!-- блок дата, месяц, время -->
                         <div class="list-events__date-block">
                            <div class="list-events__date">
@@ -388,8 +612,40 @@
                            </a>
                         </div>
                      </div>
+                     <!-- карточка сеткой -->
+                     <div class="list-events__item list-events__item--long column">
+                        <!-- блок дата, месяц, время -->
+                        <div class="column__date-block">
+                           <div class="column__date">
+                              29 May
+                           </div>
+                           <div class="column__schedule">
+                              <!-- <span class="column__month">
+                                 August
+                              </span> -->
+                              <span class="column__time">
+                                 11:00 – 12:00
+                              </span>
+                           </div>
+                        </div>
+                        <!-- текстовый блок -->
+                        <div class="column__text-block">
+                           <p class="column__text">
+                              Who is a project manager and do I want to be PM?
+                           </p>
+                           <p class="column__info">
+                              Onine lecture
+                           </p>
+                        </div>
+                        <!-- блок с кнопкой -->
+                        <div class="column__button-block">
+                           <a href="#" class="column__button colorless-button">
+                              View more
+                           </a>
+                        </div>
+                     </div>
                      <!-- блок с карточкой -->
-                     <div class="list-events__item list-events__item--long">
+                     <div class="list-events__item list-events__item--long row _active">
                         <!-- блок дата, месяц, время -->
                         <div class="list-events__date-block">
                            <div class="list-events__date">
@@ -417,6 +673,39 @@
                         <!-- блок с кнопкой -->
                         <div class="list-events__button-block">
                            <a href="#" class="list-events__button colorless-button">
+                              View more
+                           </a>
+                        </div>
+                     </div>
+                     <!-- карточка сеткой -->
+                     <div class="list-events__item list-events__item--long column">
+                        <!-- блок дата, месяц, время -->
+                        <div class="column__date-block">
+                           <div class="column__date">
+                              18 May
+                           </div>
+                           <div class="column__schedule">
+                              <!-- <span class="column__month">
+                                 August
+                              </span> -->
+                              <span class="column__time">
+                                 10:00 – 12:00
+                              </span>
+                           </div>
+                        </div>
+                        <!-- текстовый блок -->
+                        <div class="column__text-block">
+                           <p class="column__text">
+                              The company's business page as an additional tool to support the announcement of
+                              vacancies.
+                           </p>
+                           <p class="column__info">
+                              Onine lecture
+                           </p>
+                        </div>
+                        <!-- блок с кнопкой -->
+                        <div class="column__button-block">
+                           <a href="#" class="column__button colorless-button">
                               View more
                            </a>
                         </div>
