--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="css/style.css">
    <link rel="shortcut icon" href="favicon.ico">
    <title>About us</title>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
 </head>
 
 <body>
@@ -82,8 +83,8 @@
                   </div>
                   <!-- блок с кнопками -->
                   <div class="about-us__buttons-block">
-                     <a href="#" class="about-us__button colorless-button">Explore events</a>
-                     <a href="#" class="about-us__button button">Browse courses</a>
+                     <a href="events.html" class="about-us__button colorless-button">Explore events</a>
+                     <a href="courses.html" class="about-us__button button">Browse courses</a>
                   </div>
                </div>
                <div class="about-us__image">
@@ -933,7 +934,7 @@
                      <span class="subtitle-title__string">Our blog</span>
                      <h2 class="subtitle-title__title">Latest posts</h2>
                   </div>
-                  <a href="#" class="our-blog__button button">
+                  <a href="blog.html" class="our-blog__button button">
                      Go to blog
                   </a>
                </div>
@@ -1406,6 +1407,7 @@
    </div>
    <script src="js/menu.js"></script>
    <script src="js/slider.js"></script>
+   <script src="js/gsap.js"></script>
 </body>
 
 </html>
