--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <link rel="shortcut icon" href="favicon.ico">
    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
    <title>Createx</title>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
 </head>
 
 <body>
@@ -1508,6 +1509,7 @@
    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
    <script src="js/swiper.js"></script>
    <script src="js/menu.js"></script>
+   <script src="js/gsap.js"></script>
 </body>
 
 </html>
